packages/components-js/src/components/form/textarea-wrapper/textarea-wrapper.scss
@import '../../../../../../packages/scss-utils/index';

@mixin p-textarea-wrapper-label-text-visible() {
  position: static;
  width: auto;
  height: auto;
  margin: 0;
  padding: 0 0 $p-spacing-4 0;
  white-space: normal;
  overflow: visible;
  clip: auto;
  clip-path: none;
}

@mixin p-textarea-wrapper-label-text-hidden() {
  position: absolute;
  width: 1px;
  height: 1px;
  margin: -1px;
  padding: 0;
  white-space: nowrap;
  overflow: hidden;
  clip: rect(1px, 1px, 1px, 1px);
  clip-path: inset(50%);
}

:host {
  display: block;
}

::slotted(textarea) {
  position: relative !important;
  width: 100% !important;
  min-height: p-rem(188px);
  display: block !important;
  padding: p-rem(10px) !important;
  margin: 0 !important;
  outline: transparent none !important;
  outline-offset: 3px !important;
  appearance: none !important;
  box-sizing: border-box !important;
  border-width: 0 !important;
  border-top-color: transparent !important;
  background-color: transparent !important;
  opacity: 1 !important;
  font-family: $p-font-primary !important;
  font-weight: $p-font-weight-regular !important;
  font-size: p-font-size($p-text-size-small) !important;
  line-height: p-line-height($p-text-size-small) !important;
  text-indent: 0 !important;
  color: $p-color-theme-light-default !important;
  resize: vertical;
  transition: outline-color $p-animation-hover-duration $p-animation-hover-bezier,
  color $p-animation-hover-duration $p-animation-hover-bezier,
  border-top-color 1ms linear !important; // used for transitionend event listener;
}

// Focus
::slotted(textarea:focus) {
  outline: $p-color-theme-light-state-focus solid 2px !important;
}

::slotted(textarea:read-only:focus) {
  outline: none !important;
}

// Read only
::slotted(textarea:not(:disabled):read-only) {
  border-top-color: rgba(255, 255, 255, 0.01) !important;
  color: $p-color-theme-light-neutral-contrast-medium !important;
}

// Disabled
::slotted(textarea:disabled) {
  border-top-color: rgba(255, 255, 255, 0.02) !important;
  color: $p-color-theme-light-state-disabled !important;
  -webkit-text-fill-color: $p-color-theme-light-state-disabled !important; // fix placeholder color bug in Safari
  cursor: not-allowed !important;
}

.#{$p-global-class-prefix}textarea-wrapper {
  $bem-block: &;

  &__label {
    display: block;
  }

  &__label-text,
  &__description-text {
    display: block;
    width: fit-content;
    color: $p-color-theme-light-default;
    transition: color $p-animation-hover-duration $p-animation-hover-bezier;

    &--disabled {
      color: $p-color-theme-light-state-disabled;
    }

    &--visible {
      @include p-textarea-wrapper-label-text-visible;
    }

    &--hidden {
      @include p-textarea-wrapper-label-text-hidden;
    }

    @include p-breakpoint("xs") {
      &--visible-xs {
        @include p-textarea-wrapper-label-text-visible;
      }

      &--hidden-xs {
        @include p-textarea-wrapper-label-text-hidden;
      }
    }

    @include p-breakpoint("s") {
      &--visible-s {
        @include p-textarea-wrapper-label-text-visible;
      }

      &--hidden-s {
        @include p-textarea-wrapper-label-text-hidden;
      }
    }

    @include p-breakpoint("m") {
      &--visible-m {
        @include p-textarea-wrapper-label-text-visible;
      }

      &--hidden-m {
        @include p-textarea-wrapper-label-text-hidden;
      }
    }

    @include p-breakpoint("l") {
      &--visible-l {
        @include p-textarea-wrapper-label-text-visible;
      }

      &--hidden-l {
        @include p-textarea-wrapper-label-text-hidden;
      }
    }

    @include p-breakpoint("xl") {
      &--visible-xl {
        @include p-textarea-wrapper-label-text-visible;
      }

      &--hidden-xl {
        @include p-textarea-wrapper-label-text-hidden;
      }
    }
  }

  &__description-text {
    color: $p-color-theme-light-neutral-contrast-medium;

    #{$bem-block}__label-text ~ & {
      margin-top: p-rem(-4px);
    }

    &--disabled {
      color: $p-color-theme-light-state-disabled;
    }
  }

  &__fake-textarea {
    display: block;
    padding: p-rem(2px);
    background-color: $p-color-theme-light-background;
    box-shadow: inset 0 0 0 1px $p-color-theme-light-neutral-contrast-medium;
    box-sizing: border-box;
    transition: box-shadow $p-animation-hover-duration $p-animation-hover-bezier,
    background-color $p-animation-hover-duration $p-animation-hover-bezier;

    &:hover:not(&--disabled):not(&--readonly):not(&--success):not(&--error),
    #{$bem-block}__label-text:hover ~ &:not(&--disabled):not(&--readonly):not(&--success):not(&--error) {
      box-shadow: inset 0 0 0 1px $p-color-theme-light-default;
    }

    &--disabled {
      box-shadow: inset 0 0 0 1px $p-color-theme-light-state-disabled;
      background-color: $p-color-theme-light-background;
    }

    &--readonly {
      box-shadow: inset 0 0 0 1px $p-color-theme-light-surface;
      background-color: $p-color-theme-light-surface;
    }

    &--success {
      box-shadow: inset 0 0 0 2px $p-color-theme-light-notification-success;

      &:hover,
      #{$bem-block}__label-text:hover ~ & {
        box-shadow: inset 0 0 0 2px darken($p-color-theme-light-notification-success, 12%);
      }
    }

    &--error {
      box-shadow: inset 0 0 0 2px $p-color-theme-light-notification-error;

      &:hover,
      #{$bem-block}__label-text:hover ~ & {
        box-shadow: inset 0 0 0 2px darken($p-color-theme-light-notification-error, 12%);
      }
    }
  }

  &__message {
    margin-top: $p-spacing-4;
    color: $p-color-theme-light-default;
    transition: color $p-animation-hover-duration $p-animation-hover-bezier;

    &--success {
      color: $p-color-theme-light-notification-success;
    }

    &--error {
      color: $p-color-theme-light-notification-error;
    }

    &--none {
      color: $p-color-theme-light-default;
    }
  }
}

